# cruet

./: .gitignore  HACKING.md  Makefile  README.md  index.html  pyproject.toml  requirements-dev.txt  setup.py
benchmarks/: run_benchmarks.py  run_wrk.sh
benchmarks/apps/: hello_world.py  json_api.py  middleware_chain.py  routing_heavy.py
benchmarks/microbenchmarks/: bench_parsing.py  bench_routing.py
docs/: CLAUDE_PLAN.md  PLAN.md  STATUS.md
src/_cruet/: module.c  module.h
src/cruet/: __init__.py  __main__.py  _cruet.pyi  app.py  blueprints.py  cli.py  config.py  ctx.py  debughelpers.py  globals.py  helpers.py  json_provider.py  logging.py  serving.py  sessions.py  signals.py  templating.py  testing.py  views.py  wrappers.py
tests/: conftest.py  test_build.py
tests/test_app/: test_app_api.py  test_app_edge.py  test_blueprint_api.py  test_blueprints.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_cruet_app.py  test_helpers.py  test_lifecycle.py  test_middleware.py  test_sessions.py  test_templates.py
tests/test_cli/: test_cli.py
tests/test_compat/: test_flask_compat.py  test_flask_compat_extended.py  test_flask_examples.py
tests/test_flask_upstream/: conftest.py
tests/test_http/: test_cookies.py  test_cookies_edge.py  test_headers.py  test_multidict.py  test_multipart.py  test_multipart_edge.py  test_querystring.py  test_querystring_edge.py  test_request.py  test_request_edge.py  test_request_response_api.py  test_response.py  test_response_edge.py  test_unicode.py
tests/test_routing/: test_converters.py  test_cow_routing.py  (+4 more)
(+32 files in other folders)
