[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruet"
version = "0.1.0"
description = "High-performance Flask-compatible framework and WSGI server (Gunicorn + Flask replacement) with C extensions"
license = {text = "MIT"}
requires-python = "==3.11.*"
authors = [
    {name = "Sawyer X"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flask>=3.0",
]
minimal = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
